# comfyg-switch

./: .gitignore  ComfygSwitch-example.json  ComfygSwitch.py  README.md  __init__.py  model_configs.json  pyproject.toml
.github/workflows/: publish.yml
web/: comfygswitch.js
