[project]
name = "comfyg-switch"
description = "Comfyg Switch is a custom node that dynamically selects model configuration parameters based on the chosen checkpoint. It reads model-specific settings from a JSON file (model_configs.json)."
version = "1.2.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/guerreiro/comfyg-switch"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "guerreiro"
DisplayName = "comfyg-switch"
Icon = ""
